<resources>
    <string name="app_name">5e Turn Tracker</string>
    <string name="class_select_text">Select Character Class</string>
    <string name="artificer">Artificer</string>
    <string name="barbarian">Barbarian</string>
    <string name="bard">Bard</string>
    <string name="cleric">Cleric</string>
    <string name="druid">Druid</string>
    <string name="fighter">Fighter</string>
    <string name="monk">Monk</string>
    <string name="paladin">Paladin</string>
    <string name="ranger">Ranger</string>
    <string name="rogue">Rogue</string>
    <string name="sorcerer">Sorcerer</string>
    <string name="warlock">Warlock</string>
    <string name="wizard">Wizard</string>
    <string name="race_select_text">Select Character Race</string>
    <string name="aarakoska">Aarakoska</string>
    <string name="aasimar">Aasimar</string>
    <string name="aasimar_fallen">Aasimar (Fallen)</string>
    <string name="aasimar_protecter">Aasimar (Protecter)</string>
    <string name="aasimar_scourge">Aasimar (Scrouge)</string>
    <string name="bugbear">Bugbear</string>
    <string name="centaur">Centaur</string>
    <string name="changeling">Changeling</string>
    <string name="dragonborn">Dragonborn</string>
    <string name="dwarf_duergar">Dwarf (Dreugar)</string>
    <string name="dwarf_hill">Dwarf (Hill)</string>
    <string name="dwarf_mark">Dwarf (Mark of Warding)</string>
    <string name="dwarf_mountain">Dwarf (Mountain)</string>
    <string name="elf_drow">Elf (Drow)</string>
    <string name="elf_eladrin">Elf (Eladrin)</string>
    <string name="elf_high">Elf (High)</string>
    <string name="elf_mark">Elf (Mark of Shadow)</string>
    <string name="elf_sea">Elf (Sea)</string>
    <string name="elf_shadarkai">Elf (Shadar-kai)</string>
    <string name="elf_wood">Elf (Wood)</string>
    <string name="firbolg">Firbolg</string>
    <string name="genasi_air">Genasi (Air)</string>
    <string name="genasi_earth">Genasi (Earth)</string>
    <string name="genasi_fire">Genasi (Fire)</string>
    <string name="genasi_water">Genasi (Water)</string>
    <string name="gith_githyanki">Gith (Githyanki)</string>
    <string name="gith_githzerai">Gith (Githzerai)</string>
    <string name="gnome_deep">Gnome (Deep)</string>
    <string name="gnome_svirfneblin">Gnome (Deep/Svirfneblin)</string>
    <string name="gnome_forest">Gnome (Forest)</string>
    <string name="gnome_mark">Gnome (Mark of Scribing</string>
    <string name="gnome_rock">Gnome (Rock)</string>
    <string name="goblin">Goblin</string>
    <string name="halfelf">Half-Elf</string>
    <string name="halfelf_aquatic">Half-Elf (Aquatic Elf Descent)</string>
    <string name="halfelf_drow">Half-Elf (Drow Descent)</string>
    <string name="halfelf_mark_detection">Half-Elf (Mark of Detection)</string>
    <string name="halfelf_mark_storm">Half-Elf (Mark of Storm)</string>
    <string name="halfelf_moon_sun">Half-Elf (Moon or Sun Elf Descent</string>
    <string name="halfelf_wood">Half-Elf (Wood Elf Descent</string>
    <string name="halforc">Half-Orc</string>
    <string name="halforc_mark_finding">Half-Orc (Mark of Finding)</string>
    <string name="halfling_ghostwise">Halfling (Ghostwise)</string>
    <string name="halfling_lightfoot">Halfling (Lightfoot)</string>
    <string name="halfling_mark_healing">Halfling (Mark of Healing</string>
    <string name="halfling_mark_hospitality">Halfling (Mark of Hospitality</string>
    <string name="halfling_scout">Halfling (Scout)</string>
    <string name="hobgoblin">Hobgoblin</string>
    <string name="human">Human</string>
    <string name="human_variant">Human (Variant)</string>
    <string name="kalashtar">Kalashtar</string>
    <string name="kenku">Kenku</string>
    <string name="kobold">Kobold</string>
    <string name="lizardfolk">Lizardfolk</string>
    <string name="loxodon">Loxodon</string>
    <string name="minotaur">Minotaur</string>
    <string name="orc">Orc</string>
    <string name="shifter_beasthide">Shifter (Beasthide)</string>
    <string name="shifter_longtooth">Shifter (Longtooth)</string>
    <string name="shifter_swiftstride">Shifter (Swiftstride)</string>
    <string name="shifter_wildhunt">Shifter (Wildhunt)</string>
    <string name="simic_hybrid">Simic Hybrid</string>
    <string name="tabaxi">Tabaxi</string>
    <string name="tiefling">Tiefling</string>
    <string name="triton">Triton</string>
    <string name="vedalken">Vedalken</string>
    <string name="verdan">Verdan</string>
    <string name="warforged">Warforged</string>
    <string name="yanti">Yuan-ti Pureblood</string>
    <string name="subclass_select_text">Select Character Subclass</string>
    <string name="alchemist">Alchemist</string>
    <string name="artillerist">Artillerist</string>
    <string name="battle_smith">Battle Smith</string>
    <string name="ancestral_guardian">Ancestral Guardian</string>
    <string name="battlerager">Battlerager</string>
    <string name="berserker">Berserker</string>
    <string name="storm_harald">Storm Harald</string>
    <string name="totem_warrior">Totem Warrior</string>
    <string name="zealot">Zealot</string>
    <string name="glamour">Glamour</string>
    <string name="lore">Lore</string>
    <string name="swords">Swords</string>
    <string name="valor">Valor</string>
    <string name="whispers">Whispers</string>
    <string name="arcana">Arcana</string>
    <string name="death">Death</string>
    <string name="forge">Forge</string>
    <string name="grave">Grave</string>
    <string name="knowledge">Knowledge</string>
    <string name="life">Life</string>
    <string name="light">Light</string>
    <string name="nature">Nature</string>
    <string name="order">Order</string>
    <string name="tempest">Tempest</string>
    <string name="trickery">Trickery</string>
    <string name="war">War</string>
    <string name="dreams">Dreams</string>
    <string name="land">Land</string>
    <string name="moon">Moon</string>
    <string name="shepard">Shepard</string>
    <string name="spores">Spores</string>
    <string name="arcane_archer">Arcane Archer</string>
    <string name="battle_master">Battle Master</string>
    <string name="cavalier">Cavalier</string>
    <string name="champion">Champion</string>
    <string name="eldritch_knight">Eldritch Knight</string>
    <string name="purple_dragon_knight">Purple Dragon Knight</string>
    <string name="samurai">Samurai</string>
    <string name="drunken_master">Drunken Master</string>
    <string name="four_elements">Four Elements</string>
    <string name="kensei">Kensei</string>
    <string name="long_death">Long Death</string>
    <string name="open_hand">Open Hand</string>
    <string name="shadow">Shadow</string>
    <string name="sun_soul">Sun Soul</string>
    <string name="ancients">Ancients</string>
    <string name="conquest">Conquest</string>
    <string name="crown">Crown</string>
    <string name="devotion">Devotion</string>
    <string name="oathbreaker">Oathbreaker</string>
    <string name="redemption">Redemption</string>
    <string name="vengeance">Vengeance</string>
    <string name="beast_master">Beast Master</string>
    <string name="gloom_stalker">Gloom Stalker</string>
    <string name="horizon_walker">Horizon Walker</string>
    <string name="hunter">Hunter</string>
    <string name="monster_slayer">Monster Slayer</string>
    <string name="arcane_trickster">Arcane Trickster</string>
    <string name="assassin">Assassin</string>
    <string name="inquisitive">Inquisitive</string>
    <string name="mastermind">Mastermind</string>
    <string name="scout">Scout</string>
    <string name="swashbuckler">Swashbuckler</string>
    <string name="thief">Thief</string>
    <string name="divine_soul">Divine Soul</string>
    <string name="draconic">Draconic</string>
    <string name="sorc_shadow">Shadow</string>
    <string name="storm">Storm</string>
    <string name="wild">Wild</string>
    <string name="archfey">Archfey</string>
    <string name="celestial">Celestial</string>
    <string name="fiend">Fiend</string>
    <string name="great_old_one">Great Old One</string>
    <string name="hexblade">Hexblade</string>
    <string name="undying">Undying</string>
    <string name="abjuration">Abjuration</string>
    <string name="bladesinging">Bladesinging</string>
    <string name="conjuration">Conjuration</string>
    <string name="divination">Divination</string>
    <string name="enchantment">Enchantment</string>
    <string name="evocation">Evocation</string>
    <string name="illusion">Illusion</string>
    <string name="necromancy">Necromancy</string>
    <string name="transmutation">Transmutation</string>
    <string name="war_magic">War Magic</string>
    <string name="acolyte">Acolyte</string>
    <string name="anthropologist">Anthropologist</string>
    <string name="archaeologist">Archaeologist</string>
    <string name="azorius_functionary">Azorius Functionary</string>
    <string name="boros_legionnaire">Boros Legionnaire</string>
    <string name="celebrity_scion">Celebrity Adventurer\'s Scion</string>
    <string name="charlatan">Charlatan</string>
    <string name="city_watch">City Watch</string>
    <string name="city_watch_investigator">City Watch (Investigator)</string>
    <string name="clan_crafter">Clan Crafter</string>
    <string name="cloistered_scholar">Cloistered Scholar</string>
    <string name="courtier">Courtier</string>
    <string name="criminal">Criminal</string>
    <string name="criminal_spy">Criminal (Spy)</string>
    <string name="dimir_operative">Dimir Operative</string>
    <string name="entertainer">Entertainer</string>
    <string name="entertainer_gladiator">Entertainer (Gladiator)</string>
    <string name="faceless">Faceless</string>
    <string name="faction_agent">Faction Agent</string>
    <string name="failed_merchant">Failed Merchant</string>
    <string name="far_traveler">Far Traveler</string>
    <string name="fisher">Fisher</string>
    <string name="folk_hero">Folk Hero</string>
    <string name="gambler">Gambler</string>
    <string name="golgari_agent">Golgari Agent</string>
    <string name="gruul_anarch">Gruul Anarch</string>
    <string name="guild_artisan">Guild Artisan</string>
    <string name="guild_artisan_merchant">Guild Artisan (Guild Merchant)</string>
    <string name="haunted_one">Haunted One</string>
    <string name="hermit">Hermit</string>
    <string name="house_agent">House Agent</string>
    <string name="inheritor">Inheritor</string>
    <string name="izzet_engineer">Izzet Engineer</string>
    <string name="knight_of_order">Knight of the Order</string>
    <string name="marine">Marine</string>
    <string name="mercenary_veteran">Mercenary Veteran</string>
    <string name="noble">Noble</string>
    <string name="noble_knight">Noble (Knight)</string>
    <string name="orzhov_rep">Orzhov Representative</string>
    <string name="outlander">Outlander</string>
    <string name="plaintiff">Plaintiff</string>
    <string name="rakdos_cultist">Rakdos Cultist</string>
    <string name="rival_intern">Rival Intern</string>
    <string name="sage">Sage</string>
    <string name="sailor">Sailor</string>
    <string name="sailor_pirate">Sailor (Pirate)</string>
    <string name="selesnya_initiate">Selesnya Initiate</string>
    <string name="shipwright">Shipwright</string>
    <string name="simic_scientist">Simic Scientist</string>
    <string name="smuggler">Smuggler</string>
    <string name="soldier">Soldier</string>
    <string name="urban_bounty_hunter">Urban Bounty Hunter</string>
    <string name="urchin">Urchin</string>
    <string name="uthgardt_tribe_member">Uthgardt Tribe Member</string>
    <string name="waterdhavian_noble">Waterdhavian Noble</string>
    <string name="feat_select_text">Select Character Feats</string>
    <string name="aberrant_dragonmark">Aberrant Dragonmark</string>
    <string name="actor">Actor</string>
    <string name="alert">Alert</string>
</resources>